fixed large display collapses

--- a/front/app/assets/sass/foundation/mixin/_index.scss
+++ b/front/app/assets/sass/foundation/mixin/_index.scss
@@ -1,4 +1,4 @@
-$pc: 1920px; // PC
+$pc: 6500px; // PC
 $tab: 1024px; // タブレット
 $sp: 480px;  // スマホ
 
